--- a/gforge/etc/local.d/10database.env
+++ b/gforge/etc/local.d/10database.env
@@ -7,7 +7,7 @@ if (function_exists ('apache_request_headers')) {
 // Databases, html/php/other paths, passwords
 if (getenv ('SERVER_SOFTWARE')) { // We're on the web
 	$sys_dbhost = @$headers['GForgeDbhost'] or getenv('sys_gfdbhost');
-	$sys_dbport = $headers['GForgeDbport'] or getenv('sys_gfdbport');
+	$sys_dbport = @$headers['GForgeDbport'] or getenv('sys_gfdbport');
 	$sys_dbname = $headers['GForgeDbname'] or getenv('sys_gfdbname');
 	$sys_dbuser = $headers['GForgeDbuser'] or getenv('sys_gfdbuser');
 	$sys_dbpasswd = $headers['GForgeDbpasswd'] or getenv('sys_gfdbpasswd');
