Make a multitarget makefile
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9518 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/plugins/coclico/Makefile
+++ b/plugins/coclico/Makefile
@@ -3,8 +3,24 @@ DISTREDHAT=$(shell grep -qi 'Red Hat' /etc/issue && echo rh)
 DISTSUSE=$(shell grep -qi 'SuSE' /etc/issue && echo rh)
 DIST=$(DISTDEBIAN)$(DISTREDHAT)$(DISTSUSE)
 
+PKGDIR1=mailman
+PKGDIR2=forumml
+PKGDIR=mailman
+
+MINOR=$(shell head -1 $(PKGDIR)/debian/changelog | sed 's/.*(.*-\([^-]*\)).*/\1/')
+
+PARAM=PKGDIR=$(PKGDIR) svnrev=$(MINOR)
+
+def:
+	@echo "Use make PKGDIR=<$(PKGDIR1)|$(PKGDIR2)> <target>"	
+	@#make -f Makefile.$(DIST) $(PARAM) default
+	@echo "target=default displays all params"
+	@echo "other available targets are: "
+	@cat ../../Makefile.$(DIST) | grep '^.*:.*#$$' | sed 's/FUSIONFORGE/$(FUSIONFORGE)/' | sed 's/^\(.*:\).*#\(.*\)#$$/\1		\2/'
+
 default:
-	@make -f Makefile.$(DIST) default
+	@make -f Makefile.$(DIST) $(PARAM) default
+	@cat ../../Makefile.$(DIST) | grep '^.*:.*#$$' | sed 's/FUSIONFORGE/$(FUSIONFORGE)/' | sed 's/^\(.*:\).*#\(.*\)#$$/\1		\2/'
 
 %:
-	@make -f Makefile.$(DIST) $@
+	@make -f Makefile.$(DIST) $(PARAM) $@
