Move binaries in 3rd-party
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9519 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/3rd-party/php-mail-mbox/Makefile
+++ b/3rd-party/php-mail-mbox/Makefile
@@ -12,5 +12,8 @@ default:
 	@make -f Makefile.$(DIST) $(PARAM) default
 	@cat ../../Makefile.$(DIST) | grep '^.*:.*#$$' | sed 's/FUSIONFORGE/$(FUSIONFORGE)/' | sed 's/^\(.*:\).*#\(.*\)#$$/\1		\2/'
 
-%:
+%: $(PKGDIR)
 	@make -f Makefile.$(DIST) $(PARAM) $@
+
+$(PKGDIR):
+	
