auto extract source needed for build
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9520 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/3rd-party/php-mail-mbox/Makefile
+++ b/3rd-party/php-mail-mbox/Makefile
@@ -4,11 +4,11 @@ DISTSUSE=$(shell grep -qi 'SuSE' /etc/issue && echo rh)
 DIST=$(DISTDEBIAN)$(DISTREDHAT)$(DISTSUSE)
 
 PKGDIR=php-mail-mbox-0.6.3
-MINOR=$(shell head -1 $(PKGDIR)/debian/changelog | sed 's/.*(.*-\([^-]*\)).*/\1/')
-
+PKGDSC=$(shell ls *.dsc | sort | head -1)
+MINOR=$(shell grep ^Version $(PKGDSC) | sed 's/.[^-]*-\(.*\)/\1/')
 PARAM=PKGDIR=$(PKGDIR) svnrev=$(MINOR)
 
-default:
+default: $(PKGDIR)
 	@make -f Makefile.$(DIST) $(PARAM) default
 	@cat ../../Makefile.$(DIST) | grep '^.*:.*#$$' | sed 's/FUSIONFORGE/$(FUSIONFORGE)/' | sed 's/^\(.*:\).*#\(.*\)#$$/\1		\2/'
 
@@ -16,4 +16,7 @@ default:
 	@make -f Makefile.$(DIST) $(PARAM) $@
 
 $(PKGDIR):
-	
+	dpkg-source -x $(PKGDSC)
+
+clean:
+	rm -rf $(PKGDIR)
