Make std makefile Only build fo unsupported distro
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9528 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/3rd-party/htmlpurifier/Makefile
+++ b/3rd-party/htmlpurifier/Makefile
@@ -3,8 +3,24 @@ DISTREDHAT=$(shell grep -qi 'Red Hat' /etc/issue && echo rh)
 DISTSUSE=$(shell grep -qi 'SuSE' /etc/issue && echo rh)
 DIST=$(DISTDEBIAN)$(DISTREDHAT)$(DISTSUSE)
 
-default:
-	@make -f Makefile.$(DIST) default
+DEBIANLIST=1lenny
+UBUNTULIST="1jaunty 1karmic 1lucid"
 
-%:
-	@make -f Makefile.$(DIST) $@
+PKGDIR=php-htmlpurifier-4.0.0+dfsg1
+PKGDSC=$(shell ls *.dsc | sort -V -r | head -1)
+MINOR=$(shell grep ^Version $(PKGDSC) | head -1 | sed 's/.[^-]*-\(.*\)/\1/')
+PARAM=PKGDIR=$(PKGDIR) svnrev=$(MINOR) DEBIANLIST=$(DEBIANLIST) UBUNTULIST=$(UBUNTULIST)
+
+default: $(PKGDIR)
+	@make -f Makefile.$(DIST) $(PARAM) default
+	@cat ../../Makefile.$(DIST) | grep '^.*:.*#$$' | sed 's/FUSIONFORGE/$(FUSIONFORGE)/' | sed 's/^\(.*:\).*#\(.*\)#$$/\1		\2/'
+
+%: $(PKGDIR)
+	@make -f Makefile.$(DIST) $(PARAM) $@
+
+$(PKGDIR):
+	#dget http://ftp.fr.debian.org/debian/pool/main/p/php-htmlpurifier/php-htmlpurifier_4.0.0+dfsg1-1.dsc
+	dpkg-source -x $(PKGDSC)
+
+clean:
+	rm -rf $(PKGDIR)
