replace MyGForge with MyForge
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@9577 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/etc/local.pl.example
+++ b/gforge/etc/local.pl.example
@@ -13,7 +13,7 @@ $FTPINCOMING_DIR = '/usr/share/gforge/ftp/incoming' ;
 $FTPFILES_DIR = '/usr/share/gforge/download' ;
 $sys_urlroot='/usr/share/gforge/www/' ;
 $sf_cache_dir = '/var/cache/gforge' ;
-$sys_name = 'MyGForge' ;
+$sys_name = 'MyForge' ;
 $sys_themeroot = $sys_urlroot.'themes/' ;
 $sys_news_group = '3' ;
 $sys_dbhost = '' ;
